// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      data-blade-component="tab-list"
      style={
        [
          {
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "hsla(206, 10%, 29%, 0.12)",
            "borderBottomWidth": 1,
            "shadowColor": "transparent",
            "shadowOpacity": 0,
          },
        ]
      }
    >
      <RCTScrollView
        horizontal={true}
        scrollEnabled={true}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={true}
              size="medium"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 12,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 4,
                    "width": "100%",
                  },
                ]
              }
              variant="bordered"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.normal"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={100}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={50}
                  lineHeight={100}
                  style={
                    [
                      {
                        "color": "hsla(0, 0%, 2%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.18200000000000002,
                        "lineHeight": 20,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Payments
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={true}
              size="medium"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 12,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 4,
                    "width": "100%",
                  },
                ]
              }
              variant="bordered"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.muted"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={100}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={50}
                  lineHeight={100}
                  style={
                    [
                      {
                        "color": "hsla(204, 9%, 42%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.18200000000000002,
                        "lineHeight": 20,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Refunds
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <RNCViewPager
      initialPage={0}
      layoutDirection="ltr"
      onMoveShouldSetResponderCapture={[Function]}
      onPageScroll={[Function]}
      onPageScrollStateChanged={[Function]}
      onPageSelected={[Function]}
      scrollEnabled={true}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Payments Panel
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Refunds Panel
          </Text>
        </View>
      </View>
    </RNCViewPager>
  </View>
</View>
`;

exports[`Tabs should render with filled variant 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      data-blade-component="tab-list"
      style={
        [
          {
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "hsla(0, 0%, 100%, 1)",
            "borderColor": "hsla(206, 10%, 29%, 0.18)",
            "borderRadius": 8,
            "borderWidth": 1.5,
            "padding": 4,
            "shadowColor": "transparent",
            "shadowOpacity": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "flex": 1,
          }
        }
        horizontal={true}
        scrollEnabled={false}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={false}
              size="medium"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 4,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 4,
                  },
                ]
              }
              variant="filled"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.normal"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={100}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={50}
                  lineHeight={100}
                  style={
                    [
                      {
                        "color": "hsla(0, 0%, 2%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.18200000000000002,
                        "lineHeight": 20,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Payments
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              borderLeftColor="surface.border.gray.normal"
              borderPosition="borderLeft"
              data-blade-component="divider"
              dividerStyle="solid"
              height="20px"
              isDividerHorizontal={false}
              left="1px"
              style={
                [
                  {
                    "borderLeftColor": "hsla(203, 8%, 80%, 1)",
                    "borderLeftStyle": "solid",
                    "height": 20,
                    "left": 1,
                    "top": 4,
                  },
                  {
                    "alignSelf": "stretch",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": 1,
                    "borderWidth": 0,
                    "height": 20,
                  },
                ]
              }
              thickness="thin"
              top="4px"
            />
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={false}
              size="medium"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 4,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 4,
                  },
                ]
              }
              variant="filled"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.muted"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={100}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={50}
                  lineHeight={100}
                  style={
                    [
                      {
                        "color": "hsla(204, 9%, 42%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.18200000000000002,
                        "lineHeight": 20,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Refunds
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <RNCViewPager
      initialPage={0}
      layoutDirection="ltr"
      onMoveShouldSetResponderCapture={[Function]}
      onPageScroll={[Function]}
      onPageScrollStateChanged={[Function]}
      onPageSelected={[Function]}
      scrollEnabled={true}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Payments Panel
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Refunds Panel
          </Text>
        </View>
      </View>
    </RNCViewPager>
  </View>
</View>
`;

exports[`Tabs should render with isFullWidthTabItem 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      data-blade-component="tab-list"
      style={
        [
          {
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "hsla(206, 10%, 29%, 0.12)",
            "borderBottomWidth": 1,
            "shadowColor": "transparent",
            "shadowOpacity": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "flex": 1,
          }
        }
        horizontal={true}
        scrollEnabled={false}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={false}
              size="medium"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 12,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 4,
                  },
                ]
              }
              variant="bordered"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.normal"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={100}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={50}
                  lineHeight={100}
                  style={
                    [
                      {
                        "color": "hsla(0, 0%, 2%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.18200000000000002,
                        "lineHeight": 20,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Payments
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={false}
              size="medium"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 12,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 4,
                  },
                ]
              }
              variant="bordered"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.muted"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={100}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={50}
                  lineHeight={100}
                  style={
                    [
                      {
                        "color": "hsla(204, 9%, 42%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.18200000000000002,
                        "lineHeight": 20,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Refunds
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <RNCViewPager
      initialPage={0}
      layoutDirection="ltr"
      onMoveShouldSetResponderCapture={[Function]}
      onPageScroll={[Function]}
      onPageScrollStateChanged={[Function]}
      onPageSelected={[Function]}
      scrollEnabled={true}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Payments Panel
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Refunds Panel
          </Text>
        </View>
      </View>
    </RNCViewPager>
  </View>
</View>
`;

exports[`Tabs should render with large size 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      data-blade-component="tab-list"
      style={
        [
          {
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "hsla(206, 10%, 29%, 0.12)",
            "borderBottomWidth": 1,
            "shadowColor": "transparent",
            "shadowOpacity": 0,
          },
        ]
      }
    >
      <RCTScrollView
        horizontal={true}
        scrollEnabled={true}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={true}
              size="large"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 12,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 12,
                    "width": "100%",
                  },
                ]
              }
              variant="bordered"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.normal"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={200}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={25}
                  lineHeight={200}
                  style={
                    [
                      {
                        "color": "hsla(0, 0%, 2%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.528,
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Payments
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              data-blade-component="tab-item"
              isFullWidthTabItem={true}
              size="large"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingBottom": 12,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 12,
                    "width": "100%",
                  },
                ]
              }
              variant="bordered"
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                flexDirection="row"
                gap="spacing.3"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "gap": 8,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  color="interactive.text.gray.muted"
                  data-blade-component="text"
                  fontFamily="text"
                  fontSize={200}
                  fontStyle="normal"
                  fontWeight="semibold"
                  letterSpacing={25}
                  lineHeight={200}
                  style={
                    [
                      {
                        "color": "hsla(204, 9%, 42%, 1)",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": -0.528,
                        "lineHeight": 24,
                        "marginBottom": 0,
                        "marginLeft": 0,
                        "marginRight": 0,
                        "marginTop": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 0,
                        "paddingRight": 0,
                        "paddingTop": 0,
                        "textDecorationLine": "none",
                      },
                    ]
                  }
                >
                  Refunds
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <RNCViewPager
      initialPage={0}
      layoutDirection="ltr"
      onMoveShouldSetResponderCapture={[Function]}
      onPageScroll={[Function]}
      onPageScrollStateChanged={[Function]}
      onPageSelected={[Function]}
      scrollEnabled={true}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Payments Panel
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Refunds Panel
          </Text>
        </View>
      </View>
    </RNCViewPager>
  </View>
</View>
`;
